--- a/docs/css/theme/global/scheme.css
+++ b/docs/css/theme/global/scheme.css
@@ -18,7 +18,7 @@
         --md-code-bg-color: #ffffffab;
         --md-code-fg-color: var(--md-typeset-color);
         --md-accent-fg-color--transparent: #c1c1c15b;
-        --md-pic-shadow-color:rgba(0, 0, 0, 0.075);
+        --md-pic-shadow-color:rgb(166 166 166 / 12%);
         --md-link-color: #386ad5;
     }
 }
