chore: 更新CSS样式，调整按钮和链接样式
更新CSS样式以实现按钮的背景色和字体加粗效果，调整了首页底部链接的样式，以反映项目的新名称和仓库地址。

--- a/docs/css/theme/global/img.css
+++ b/docs/css/theme/global/img.css
@@ -12,3 +12,7 @@
 .md-typeset :is(.emojione, .twemoji, .gemoji) {
     vertical-align: -0.15em;
 }
+
+.md-typeset img[align=left]{
+    margin: 0 1rem 0 0;
+}
