chore: 更新CSS样式，调整按钮和链接样式

--- a/docs/css/theme/card.css
+++ b/docs/css/theme/card.css
@@ -16,6 +16,7 @@ name {
     font-size:1.45rem;
     font-weight: 700;
     color: var(--md-default-fg-color);
+    margin-left: 10px;
 }
 
 #width-pic {
