--- a/docs/css/enc/button.css
+++ b/docs/css/enc/button.css
@@ -1,15 +1,18 @@
 #mkdocs-decrypt-button {
-    width: 10%;
+    width: 100%;
+    max-width: 15%;
     padding: 0rem;
     height: 2rem;
-    background-color: var(--md-code-bg-color);
+    background-color: var(--md-primary-fg-color);
     color: var(--md-default-fg-color);
-    border: none;
+    border: 2px solid var(--md-pic-shadow-color);
     border-radius: 8px;
     transition: font-weight .25s,background-color .25s;
-    box-shadow: 2px 3px 10px 2px var(--md-pic-shadow-color);
+    /* box-shadow: 2px 3px 10px 2px var(--md-pic-shadow-color); */
+    box-shadow: none;
 }
 #mkdocs-decrypt-button:hover, #mkdocs-decrypt-button:focus{
     background-color: var(--md-pic-shadow-color);
     font-weight: 900;
+    box-shadow: inset 0px 0px 20px 20px var(--md-pic-shadow-color);
 }
