chore: 调整按钮和链接样式
调整按钮和链接样式，更新了CSS样式文件中的代码。修复了表单在鼠标悬停和获取焦点时边框的显示问题，并添加了过渡效果。修复了导航栏中的问题反馈链接，更新了相关文档的URL地址。

Fixes #issue-number

--- a/docs/css/enc/block.css
+++ b/docs/css/enc/block.css
@@ -4,7 +4,9 @@ form#mkdocs-decrypt-form{
     background-color: var(--md-primary-fg-color);
     border-radius: 8px;
     border: 2px solid var(--md-pic-shadow-color);
+    transition: border .25s,box-shadow .25s;
 }
 form#mkdocs-decrypt-form:hover, form#mkdocs-decrypt-form:focus{
-    border: 2px solid var(--md-primary-fg-color);
+    border: 1px solid var(--md-pic-shadow-color);
+    box-shadow: var(--md-shadow-z2)
 }
